aggiunta classe validation e major changes